# jaxgam

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
IMPLEMENTATION_PLAN/: index.html
R_SOURCE_MAP/: index.html
api/: index.html
citations/: index.html
design/: index.html
docs/: IMPLEMENTATION_PLAN.md  R_SOURCE_MAP.md  api.md  citations.md  design.md  experiments.md  index.md  quickstart.md
experiments/: index.html
jaxgam/: __init__.py  api.py  jax_utils.py
jaxgam/families/: __init__.py  base.py  registry.py  standard.py
jaxgam/fitting/: __init__.py  data.py  initialization.py  newton.py  pirls.py  reml.py
jaxgam/formula/: __init__.py  design.py  parser.py
jaxgam/links/: __init__.py  links.py
jaxgam/penalties/: __init__.py  penalty.py
jaxgam/plot/: __init__.py  plot_gam.py
jaxgam/predict/: __init__.py
jaxgam/smooths/: __init__.py  base.py  by_variable.py  constraints.py  cubic.py  registry.py  tensor.py  tprs.py
jaxgam/summary/: __init__.py  _davies.py  summary.py
pymgcv/: __init__.py  api.py  jax_utils.py
pymgcv/autodiff/: __init__.py  jax_ad.py
pymgcv/compat/: __init__.py  r_bridge.py
pymgcv/families/: __init__.py  base.py  registry.py  standard.py
pymgcv/fitting/: __init__.py  constraints.py  convergence.py  data.py  initialization.py  newton.py  pirls.py  reml.py
pymgcv/formula/: __init__.py  design.py  parser.py  terms.py
pymgcv/linalg/: __init__.py  backend.py  cholesky.py  eigen.py  qr.py
pymgcv/links/: __init__.py  links.py
pymgcv/penalties/: __init__.py  penalty.py
pymgcv/plot/: __init__.py  plot_gam.py
pymgcv/predict/: __init__.py  lpmatrix.py  posterior.py  predict.py
pymgcv/smooths/: __init__.py  base.py  by_variable.py  constraints.py  cubic.py  registry.py  tensor.py  tprs.py
pymgcv/summary/: __init__.py  _davies.py  (+3 more)
quickstart/: index.html
scripts/: benchmark_large_p.py  benchmark_vs_r.py  generate_reference_data.R  generate_reference_data.py  plot_speedup_vs_n.py  profile_fit.py
search/: search_index.json
tests/: conftest.py  helpers.py  r_bridge.py  test_constraints.py  test_edge_cases.py  test_families.py  test_infrastructure.py  test_linalg.py  test_links.py  test_penalties.py  test_phase_boundary.py  test_r_bridge.py  test_validation_matrix.py  tolerances.py
(+54 files in other folders)
