[project]
name = "pymgcv"
version = "1.0.0a1"
description = "Python port of R's mgcv package for Generalized Additive Models"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "formulaic>=1.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
    "pytest-cov",
    "pre-commit",
    "ruff",
    "rpy2>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# R bridge contains embedded R scripts in f-strings with long lines
"pymgcv/compat/r_bridge.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["pymgcv"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "raise NotImplementedError",
    "if __name__ == .__main__.",
]
